# azure_kinect_depth_diff

./: CMakeLists.txt  README.md  setup_env.bash
include/: util.hpp
main/: depth_stream.cpp
